# cvrecord

./: .gitignore  README.md  build.ps1  cvrecord.spec  dev-deps-docs.txt  dev-deps-release.txt  pyproject.toml
.github/: copilot-instructions.md
src/: app_paths.py  main.py
src/camera/: __init__.py  camera_detection.py
src/icon_creator/: __init__.py  icon_creator.py
